--- a/package.json
+++ b/package.json
@@ -226,6 +226,7 @@
   },
   "ethereum": "0x26a3CB49578F07000575405a57888681249c35Fd",
   "dependencies": {
+    "google-protobuf": "^3.21.2",
     "ws": "^8.8.1"
   }
 }
